salesforce-dedupe/force-app/main/default/objects/Dedupe_Merge_Audit__c/Dedupe_Merge_Audit__c.object-meta.xml
<CustomObject>
    <label>Dedupe Merge Audit</label>
    <pluralLabel>Dedupe Merge Audits</pluralLabel>
    <nameField>
        <label>Audit No.</label>
        <type>AutoNumber</type>
        <displayFormat>DMA-{0000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>One row per duplicate group evaluated by the dedupe automation: the scorecard, the outcome, and the merge trail. See salesforce-dedupe/docs/SCORECARD.md.</description>
</CustomObject>