salesforce-dedupe/force-app/main/default/objects/Dedupe_Merge_Audit__c/fields/Best_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Best_Scenario__c</fullName>
    <label>Best Scenario</label>
    <type>Text</type>
    <length>120</length>
</CustomField>