salesforce-dedupe/force-app/main/default/objects/Dedupe_Merge_Audit__c/fields/Flags__c.field-meta.xml
<CustomField>
    <fullName>Flags__c</fullName>
    <label>Guardrail Flags</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>