salesforce-dedupe/force-app/main/default/objects/Dedupe_Merge_Audit__c/fields/Group_Key__c.field-meta.xml
<CustomField>
    <fullName>Group_Key__c</fullName>
    <label>Group Key</label>
    <type>Text</type>
    <length>255</length>
    <description>Normalised FirstName|LastName|Email grouping key.</description>
</CustomField>