salesforce-dedupe/force-app/main/default/objects/Dedupe_Merge_Audit__c/fields/Id_Points__c.field-meta.xml
<CustomField>
    <fullName>Id_Points__c</fullName>
    <label>ID Points</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
    <description>Points of identification (SOP: Contacts need 2.5+, Accounts 3+).</description>
</CustomField>