salesforce-dedupe/force-app/main/default/objects/Dedupe_Merge_Audit__c/fields/Master_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Id__c</fullName>
    <label>Master Record Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>