salesforce-dedupe/force-app/main/default/objects/Dedupe_Merge_Audit__c/fields/Merged_Ids__c.field-meta.xml
<CustomField>
    <fullName>Merged_Ids__c</fullName>
    <label>Merged Record Ids</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>