salesforce-dedupe/force-app/main/default/objects/Dedupe_Merge_Audit__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>Text</type>
    <length>50</length>
</CustomField>