salesforce-dedupe/force-app/main/default/objects/Dedupe_Merge_Audit__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Auto-Merged</fullName><default>false</default><label>Auto-Merged</label></value>
            <value><fullName>Dry Run - Would Merge</fullName><default>false</default><label>Dry Run - Would Merge</label></value>
            <value><fullName>Review</fullName><default>false</default><label>Review</label></value>
            <value><fullName>Blocked</fullName><default>false</default><label>Blocked</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>