salesforce-dedupe/force-app/main/default/objects/Dedupe_Merge_Audit__c/fields/Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Record_Count__c</fullName>
    <label>Record Count</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>