salesforce-dedupe/force-app/main/default/objects/Dedupe_Merge_Audit__c/fields/Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Run_Id__c</fullName>
    <label>Run Id</label>
    <type>Text</type>
    <length>40</length>
</CustomField>