salesforce-dedupe/force-app/main/default/objects/Dedupe_Merge_Audit__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Plauti-aligned 0-100 score of the best scenario (weakest pair in the group).</description>
</CustomField>