salesforce-dedupe/force-app/main/default/objects/Dedupe_Merge_Audit__c/fields/Scorecard_JSON__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_JSON__c</fullName>
    <label>Scorecard JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>Full per-pair, per-field scorecard breakdown.</description>
</CustomField>